# facemeup

./: .gitignore  Caddyfile  QUICK_START.md  README.md  SETUP_NEW_FRONTEND.md  SYSTEM_ANALYSIS.md  docker-compose.yml  fix_images.py  me.md  netlify.toml  technical.docx  ui.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  sync_products_to_db.py  test_facemesh.py  test_woocommerce.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_roles_refresh.py  0003_add_product_fields.py  0004_add_product_effects.py  0005_add_profile_report_fields.py  0006_add_report_thumbnail.py  0007_add_profile_user_feedback.py  0008_add_capture_images.py  0009_add_soft_delete.py  0010_add_product_benefits_usage.py  0011_add_order_wc_fields.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  analyze.py  auth.py  loyalty.py  orders.py  products.py  profile.py  proxy.py  recommend.py  sync.py  training.py
backend/app/core/: config.py  database.py  deps.py  errors.py  redis_client.py  security.py
backend/app/models/: __init__.py  order.py  product.py  profile.py  user.py
backend/app/models_artifacts/saved_model/: fingerprint.pb  saved_model.pb
backend/app/models_artifacts/saved_model/variables/: variables.index
backend/app/schemas/: analyze.py  auth.py  loyalty.py  orders.py  products.py  profile.py  recommend.py  sync.py
backend/app/services/: bootstrap.py  effects.py  face_processor.py  gradcam.py  inference.py  ollama_service.py  profile_service.py  recommendation.py  seed_admin.py  training_manifest.py  training_metadata.py  training_scheduler.py  woocommerce_service.py
backend/ml/: QUICKSTART.md  README.md  config.yaml  data_loader.py  evaluate.py  export_savedmodel.py  export_tflite.py  feedback_export.py  losses.py  model_builder.py  quick_train.py  quick_train_docker.ps1  run_export.py  test_setup.py  train.py  train_in_docker.ps1  train_in_docker.sh  train_pipeline.py
backend/ml/scripts/: check_training_manifest.py  download_isic.py  download_skin_dataset.py
backend/tests/: test_health.py  test_recommend.py
backend_v2/: go.mod  (+8 more)
backend_v2/ml_service/: Dockerfile  README.md  pyproject.toml
backend_v2/ml_service/app/: config.py  main.py  onnx_runner.py  schemas.py
backend_v2/ml_service/app/pipeline/: __init__.py  align.py  classify.py  decode.py  detect.py  groq_provider.py  heatmaps.py  landmarks.py  normalize.py  patches.py  quality.py  runner.py  segment.py
backend_v2/ml_service/scripts/: build_stub_classifier.py  download_models.py
backend_v2/ml_service/tests/: conftest.py  test_api.py  test_classifier.py  test_pipeline.py
backend_v2/ml_training/: README.md  pyproject.toml
backend_v2/ml_training/configs/: base.yaml  distill.yaml
backend_v2/ml_training/notebooks/: phase3_colab.ipynb
backend_v2/ml_training/scripts/: build_notebook.py  colab_quickstart.py
backend_v2/ml_training/src/skin_training/: __init__.py  config.py
backend_v2/ml_training/src/skin_training/data/: bitmoji.py  dataset.py  labels.py  precompute.py  sampler.py  scin.py
backend_v2/ml_training/src/skin_training/eval/: metrics.py
backend_v2/ml_training/src/skin_training/export/: quantize.py  to_onnx.py
backend_v2/ml_training/tests/: test_distill_smoke.py  test_glowmix.py  test_labels.py  test_model_smoke.py  test_precompute.py  test_scin.py  test_scin_hf.py
(+161 files in other folders)
